# emmsap

./: .gitignore  AGENTS.md  LICENSE  README.md  README.md~  Unedited in PMFC.txt  db.sqlite3  pyproject.toml  requirements.txt
demos/: EMMSAP_similarity_demo.ipynb
emmsap/: #knownSkips.py#  Karlsruhe_Talk_EMMSAP.ipynb  __init__.py  __main__.py  deletePiece.py  dt_make_subset.py  elvis_trecento.py  emmsap_test.ipynb  fileAndSheet.py  files.py  gloriaLengths.py  indexFiles.py  indexRatios.py  indexSegments.py  indexTexts.py  indexTinyNotation.py  knownSkips.py  meter_classification.py  mvOMR.py  mysqlEM.py  renameDb.py  requirements.txt  similarityDB.py  spreadsheet.py  textNGrams.py  textTree.py  tinyNotationSearch.py  toTinyNotation.py  transitionGram4.p  transitionTwoGram.p  updateDB.py  vatican1790.py
emmsap2/: files.py  manage.py  manage_skips.py  min_sim.py  requirements.txt  settings.py  tests.py  urls.py
emmsapDJ/: manage.py  models.py  settings.py  urls.py
emmsapDJ_old/: admin.py  manage.py  settings.py  wsgi.py
emmsapPurePython/: Karlsruhe_Talk.ipynb  Untitled.ipynb  Untitled1.ipynb  allTexts.txt  fileNGrams.p  files.py  gloriaProportions.ipynb  indexRatios.py  indexTexts.py  indexTinyNotation.py  knownSkips.py  lengthSearch.py  mvOMR.py  mysqlEM.py  requirements.txt  similarityDB.py  textTree.py  tinyNotationSearch.py  toTinyNotation.py  transitionGram1.p  transitionGram2.p  transitionGram3.p  transitionProbabilities.py
emmsap_15/: README.txt  convert_wegman_mass.py  manage.py
excelMetadata/: fischer_cuthbert.xls  project_overview.xlsx  transcription_pieces.xls  ~$project_overview.xlsx
experiments/: tenor_duplum_parallels.py
removed_dups/: Dufay_6_17_Je_Languis_115.xml  FallowsMB_026_S_en_vous_pour_moy.mxl  FallowsMB_092a_N_aray_je_Ligatures.mxl  Lantins_22_Ugo_de_Lantins_Plainde_m_stuet_de_ma_damme_jolye.musicxml  Marchi_Notation_18-Je_suy_las_venus_pour_tant_atendre.xml  Marchi_Notation_19-deus_deorum_pluto_or_ti_ringratio.xml  Marchi_Notation_2-damor_languire_suspirare_e_piangere.xml  OMR_Dunstaple_54_155_O_Rosa_Bella.xml  OMR_Dunstaple_55_158_Puisque_M_Amour.xml  OMR_Dunstaple_64_178a_Durer_Rondeau.xml  OMR_E15cM_2_Bosquet_2.xml  OMR_PMFC14_82_179.xml  PMFC_04_10-Poi_che_da_te_mi_convien.xml  PMFC_24_40-Non_credo__donna.xml  Stoessel_Ch_015-Se_Zephirus.xml  Stoessel_Ch_072-En_la_saison.xml  Stoessel_Turin_04-Se_ie_ne_sui.xml
xmldata/: Aaron_Virga_Koblenz.mxl  Adio_Adio_Amore_Calvia.musicxml  Amsterdam_64_Blijfs_mi_doch.xml  Annecy_314_Fragment.mxl  Arras_941--Valenciennes-116_Patrem.xml  Arras_941_39v_si_vous_plait_tenor.xml  Arras_941_Patrem.mxl  Arras_941_ballade_t.musicxml  Ascoli_Piceno_Ave_Verum_Corpus.xml  Ascoli_Piceno_Je_Vous_Aym_Cuer_Loyal.xml  Ascoli_Piceno_Mater_Digna_Dei_Lux.xml  Ascoli_Piceno_Presulum_Quo_Tantus.xml  (+3618 more)
(+113 files in other folders)
