[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "emmsap2"
version = "0.2.0"
description = "EMMSAP Django project"
requires-python = ">=3.14"
authors = [
    { name = "Michael Scott Asato Cuthbert" },
]
dependencies = [
    "chardet<6",
    "Django>=5.2",
    "django-extensions",
    "django-stubs",
    "heap_class",
    "jupyter",
    "more_itertools",
    "music21>=9.1.0",
    "mysqlclient",
    "python-Levenshtein",
    "requests",
    "Send2Trash",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
include = ["emmsap2*"]

[tool.emmsap]
copyright = "Copyright (c) 2013-26, Michael Scott Asato Cuthbert"


[tool.ruff]
line-length = 130

[tool.ruff.lint]
# Flake8, pycodestyle, + pyflakes
select = ['E', 'W', 'F', 'B']

dummy-variable-rgx = "^(_.*|unused.*|i|j|counter|junk|dummy)"

# add once allowed: E122 (continuation line missing indentation) and E124 (bracket align)

ignore = [
    # ignore E123 (closing bracket) if ever implemented by Ruff
    # ignore E127 (over idented) if ever implemented by Ruff
    # ignore E128 (under idented) if ever implemented by Ruff
    # ignore E201 if ever implemented -- Ryaan likes space after {
    # ignore E202 -- and before }

    # space around | -- nice to omit in int|str
    'E227',
    # 0 blank lines -- good test but something going wrong in new algorithm
    'E301',
    # blank lines -- expected 2 blank lines
    'E302',
    # too many blank lines (maybe turn on soon)
    'E303',
    # assignment to lambda is sometimes fine by me.
    'E731',
    # ambiguous variable name -- l not so good, but I as RN is fine
    'E741',
    # "except" and then "raise without from" -- should do soon.
    'B904',
    # zip without strict= ... nice to turn this off someday, when code more mature
    'B905',
    # trailing whitespace -- only once all editors used by us support it
    'W291',
    # blank line contins whitespace
    'W293'
]

[tool.ruff.lint.per-file-ignores]
'*/migrations/*' = ['E501']
